@@ -53,7 +53,7 @@ import org.kohsuke.accmod.restrictions.NoExternalUse;
 import org.kohsuke.stapler.DataBoundConstructor;
 import org.kohsuke.stapler.DataBoundSetter;
 import org.kohsuke.stapler.QueryParameter;
-import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 
 /**
  * Executes a series of commands by using a shell.
@@ -103,7 +103,7 @@ public class Shell extends CommandInterpreter {
             if (end < 0)   end = command.length();
             List<String> args = new ArrayList<>(Arrays.asList(Util.tokenize(command.substring(0, end).trim())));
             args.add(script.getRemote());
-            args.set(0, args.get(0).substring(2));   // trim off "#!"
+            args.set(0, args.getFirst().substring(2));   // trim off "#!"
             return args.toArray(new String[0]);
         } else
             return new String[] { getDescriptor().getShellOrDefault(script.getChannel()), "-xe", script.getRemote()};
@@ -234,7 +234,7 @@ public class Shell extends CommandInterpreter {
         }
 
         @Override
-        public boolean configure(StaplerRequest req, JSONObject data) throws FormException {
+        public boolean configure(StaplerRequest2 req, JSONObject data) throws FormException {
             req.bindJSON(this, data);
             return super.configure(req, data);
         }
