@@ -24,11 +24,11 @@
 
 package jenkins.tasks.filters.impl;
 
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-import static org.junit.Assume.assumeFalse;
-import static org.junit.Assume.assumeTrue;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
+import static org.junit.jupiter.api.Assumptions.assumeFalse;
+import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
 import hudson.Functions;
 import hudson.model.Build;
@@ -44,18 +44,23 @@ import hudson.tasks.BatchFile;
 import hudson.tasks.Shell;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.JenkinsRule;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
-public class RetainVariablesLocalRuleTest {
+@WithJenkins
+class RetainVariablesLocalRuleTest {
 
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+    private JenkinsRule j;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
+    }
 
     @Test
-    public void retainVariable_removeUnwantedVariables_batch() throws Exception {
+    void retainVariable_removeUnwantedVariables_batch() throws Exception {
         assumeTrue(Functions.isWindows());
 
         FreeStyleProject p = j.createFreeStyleProject();
@@ -96,7 +101,7 @@ public class RetainVariablesLocalRuleTest {
     }
 
     @Test
-    public void retainVariable_removeModifiedSystemEnv_batch() throws Exception {
+    void retainVariable_removeModifiedSystemEnv_batch() throws Exception {
         assumeTrue(Functions.isWindows());
 
         FreeStyleProject p = j.createFreeStyleProject();
@@ -156,7 +161,7 @@ public class RetainVariablesLocalRuleTest {
     }
 
     @Test
-    public void retainVariable_removeModifiedSystemEnv_shell() throws Exception {
+    void retainVariable_removeModifiedSystemEnv_shell() throws Exception {
         assumeFalse(Functions.isWindows());
 
         FreeStyleProject p = j.createFreeStyleProject();
@@ -216,7 +221,7 @@ public class RetainVariablesLocalRuleTest {
     }
 
     @Test
-    public void retainVariable_removeUnwantedVariables_shell() throws Exception {
+    void retainVariable_removeUnwantedVariables_shell() throws Exception {
         assumeFalse(Functions.isWindows());
 
         FreeStyleProject p = j.createFreeStyleProject();
@@ -243,7 +248,7 @@ public class RetainVariablesLocalRuleTest {
     }
 
     @Test
-    public void retainVariable_removeSystemVariables_shell() throws Exception {
+    void retainVariable_removeSystemVariables_shell() throws Exception {
         assumeFalse(Functions.isWindows());
 
         FreeStyleProject p = j.createFreeStyleProject();
@@ -251,7 +256,7 @@ public class RetainVariablesLocalRuleTest {
         p.getBuildersList().add(shell);
 
         FreeStyleBuild build = j.buildAndAssertSuccess(p);
-        List<String> unfilteredLogOutput = build.getLog(200).stream().filter(s -> s.contains("=")).map(s -> s.substring(0, s.indexOf('='))).collect(Collectors.toList());
+        List<String> unfilteredLogOutput = build.getLog(200).stream().filter(s -> s.contains("=")).map(s -> s.substring(0, s.indexOf('='))).toList();
 
         p.getBuildersList().remove(shell);
 
@@ -265,7 +270,7 @@ public class RetainVariablesLocalRuleTest {
         p.getBuildersList().add(filteredShell);
 
         build = j.buildAndAssertSuccess(p);
-        List<String> filteredLogOutput = build.getLog(200).stream().filter(s -> s.contains("=")).map(s -> s.substring(0, s.indexOf('='))).collect(Collectors.toList());
+        List<String> filteredLogOutput = build.getLog(200).stream().filter(s -> s.contains("=")).map(s -> s.substring(0, s.indexOf('='))).toList();
 
         assertTrue(filteredLogOutput.size() < unfilteredLogOutput.size() - 10); // 10 is a value slightly larger than the number of characteristic env vars (7)
         List<String> filteredButNotUnfiltered = new ArrayList<>(filteredLogOutput);
@@ -277,7 +282,7 @@ public class RetainVariablesLocalRuleTest {
     }
 
     @Test
-    public void multipleBuildSteps_haveSeparateRules_batch() throws Exception {
+    void multipleBuildSteps_haveSeparateRules_batch() throws Exception {
         assumeTrue(Functions.isWindows());
 
         FreeStyleProject p = j.createFreeStyleProject();
@@ -314,7 +319,7 @@ public class RetainVariablesLocalRuleTest {
     }
 
     @Test
-    public void multipleBuildSteps_haveSeparateRules_shell() throws Exception {
+    void multipleBuildSteps_haveSeparateRules_shell() throws Exception {
         assumeFalse(Functions.isWindows());
 
         FreeStyleProject p = j.createFreeStyleProject();
